--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -972,7 +972,7 @@ Resources:
           commands:
             01-executeptaconfigurationscript: 
               command: !Sub >-
-                sudo /tmp/register.sh aws "${VaultPrivateIP}" "${PVWADNSRecord}" "${VaultAdminUser}" "${StoreAdminPassword.SsmId}" ${AWS::Region} "${DRPrivateIP}"
+                sudo /tmp/register.sh aws "${VaultPrivateIP}" "${PVWAPrivateDNS}" "${VaultAdminUser}" "${StoreAdminPassword.SsmId}" ${AWS::Region} "${DRPrivateIP}"
               command: !Sub >-
                 cfn-signal -e $? --stack ${AWS::StackId} --resource PTAMachine --region ${AWS::Region}
     Condition: CreatePTACondition
