POC-000: missing OwnerAccountId param

--- a/aws/PAS-AIO-DR-Deployment.yaml
+++ b/aws/PAS-AIO-DR-Deployment.yaml
@@ -117,6 +117,7 @@ Resources:
       Version: "13.2"
       Component: "Components"
       OS: !Ref WinVersion
+      OwnerAccountId: !Ref CyberarkAccountId
     DependsOn:
       - LambdaDeployRole
     Condition: ComponentsCustomImageEmpty
