--- a/aws/PAS-AIO-DR-Deployment.yaml
+++ b/aws/PAS-AIO-DR-Deployment.yaml
@@ -103,21 +103,24 @@ Resources:
     Type: Custom::FindAMI
     Properties:
       ServiceToken: !GetAtt GetLatestAMILambda.Arn
-      Version: "13.0"
+      Version: "13.2"
       Component: "Vault"
       OS: !Ref WinVersion
       OwnerAccountId: !Ref CyberarkAccountId
     DependsOn:
       - LambdaDeployRole
+    Condition: VaultCustomImageEmpty
   ComponentsAmi:
     Type: Custom::FindAMI
     Properties:
       ServiceToken: !GetAtt GetLatestAMILambda.Arn
-      Version: "13.0"
+      Version: "13.2"
       Component: "Components"
       OS: !Ref WinVersion
+      OwnerAccountId: !Ref CyberarkAccountId
     DependsOn:
       - LambdaDeployRole
+    Condition: ComponentsCustomImageEmpty
   StoreMasterPassword:
     Type: AWS::CloudFormation::CustomResource
     Version: '1.0'
@@ -783,7 +786,11 @@ Resources:
             VolumeSize: 30
             Encrypted: true
       SubnetId: !Ref 'VaultInstanceSubnetId'
-      ImageId: !Ref VaultAmi
+      ImageId: 
+        Fn::If:
+          - VaultCustomImageEmpty
+          - !Ref VaultAmi
+          - !Ref VaultCustomAmi
       InstanceType: !Ref 'VaultInstanceType'
       UserData: !Base64
         Fn::Sub: |-
@@ -815,6 +822,8 @@ Resources:
             2-restartSSM:
               command: powershell.exe -Command "Restart-Service AmazonSSMAgent"
               waitAfterCompletion: 60
+            3-addDNSSuffix:
+              command: powershell.exe -Command "Set-DnsClientGlobalSetting -SuffixSearchList ((Get-DnsClientGlobalSetting).SuffixSearchList += 'pas.local')"
         configServices:
           commands:
             1-download:
@@ -837,14 +846,15 @@ Resources:
               command: !Sub >
                 powershell.exe -File C:\CyberArk\Deployment\VaultTagKMS.ps1 -Role ${VaultInstancesRole} -Region ${AWS::Region}
               waitAfterCompletion: 0
-            4-restart:
-              command: powershell.exe -Command Restart-Computer
+            4-ChangeHostname:
+              command: !Sub >
+                powershell.exe -Command Rename-Computer -NewName ${VaultHostname} -Force -Restart
               waitAfterCompletion: forever
         configSignal:
           commands:
             0-signalCompletion:
               command: !Sub >
-                cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId} --resource VaultMachine --region ${AWS::Region}
+                "C:\Program Files\Amazon\cfn-bootstrap\cfn-signal.exe" -e %ERRORLEVEL% --stack ${AWS::StackId} --resource VaultMachine --region ${AWS::Region}
               waitAfterCompletion: 0
     CreationPolicy:
       ResourceSignal:
@@ -867,7 +877,11 @@ Resources:
             VolumeSize: 30
             Encrypted: true
       SubnetId: !Ref 'DRInstanceSubnetId'
-      ImageId: !Ref VaultAmi
+      ImageId: 
+        Fn::If:
+          - VaultCustomImageEmpty
+          - !Ref VaultAmi
+          - !Ref VaultCustomAmi
       InstanceType: !Ref 'VaultInstanceType'
       UserData: !Base64
         Fn::Sub: |-
@@ -899,6 +913,8 @@ Resources:
             2-restartSSM:
               command: powershell.exe -Command "Restart-Service AmazonSSMAgent"
               waitAfterCompletion: 0
+            3-addDNSSuffix:
+              command: powershell.exe -Command "Set-DnsClientGlobalSetting -SuffixSearchList ((Get-DnsClientGlobalSetting).SuffixSearchList += 'pas.local')"
         configServices:
           commands:
             1-postInstall:
@@ -909,14 +925,15 @@ Resources:
               command: !Sub >
                 powershell.exe -File C:\CyberArk\Deployment\VaultTagKMS.ps1 -Role ${VaultDRInstancesRole} -Region ${AWS::Region}
               waitAfterCompletion: 0
-            3-restart:
-              command: powershell.exe -Command Restart-Computer
+            3-ChangeHostname:
+              command: !Sub >
+                powershell.exe -Command Rename-Computer -NewName ${VaultHostname}-dr -Force -Restart
               waitAfterCompletion: forever
         configSignal:
           commands:
             0-signalCompletion:
               command: !Sub >
-                cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId} --resource VaultDRMachine --region ${AWS::Region}
+                "C:\Program Files\Amazon\cfn-bootstrap\cfn-signal.exe" -e %ERRORLEVEL% --stack ${AWS::StackId} --resource VaultDRMachine --region ${AWS::Region}
               waitAfterCompletion: 0
     CreationPolicy:
       ResourceSignal:
@@ -930,7 +947,11 @@ Resources:
           Value: !Ref 'ComponentsInstanceName'
       SecurityGroupIds: !Ref 'ComponentsInstanceSecurityGroups'
       SubnetId: !Ref 'ComponentsInstanceSubnetId'
-      ImageId: !Ref ComponentsAmi
+      ImageId: 
+        Fn::If:
+          - ComponentsCustomImageEmpty
+          - !Ref ComponentsAmi
+          - !Ref ComponentsCustomAmi
       InstanceType: !Ref 'ComponentsInstanceType'
       UserData: !Base64
         Fn::Sub: |-
@@ -1057,14 +1078,17 @@ Resources:
               waitAfterCompletion: 0
         configSignal:
           commands:
-            98-restart:
-              command: powershell.exe -Command "Restart-Computer -Force"
+            98-ChangeHostname:
+              command: !Sub >
+                powershell.exe -Command Rename-Computer -NewName ${ComponentsHostname} -Force -Restart
               waitAfterCompletion: forever
             99-SignalCompletion:
-              command: !Sub 'cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId} --resource ComponentsMachine --region ${AWS::Region}'
+              command: !Sub >
+                "C:\Program Files\Amazon\cfn-bootstrap\cfn-signal.exe" -e %ERRORLEVEL% --stack ${AWS::StackId} --resource ComponentsMachine --region ${AWS::Region}
+              waitAfterCompletion: 0
     CreationPolicy:
       ResourceSignal:
-        Timeout: PT20M
+        Timeout: PT30M
     DeletionPolicy: Retain
 Parameters:
   EULA:
@@ -1081,6 +1105,11 @@ Parameters:
       - Win2016
       - Win2019
     Default: Win2016
+  VaultCustomAmi:
+    Type: String
+    Description: Enter the Vault Image ID, if you wish to use a custom Vault image.
+    AllowedPattern: ^ami-[a-f\d]{8}(?:[a-f\d]{9})?$|.{0,0}
+    ConstraintDescription: An Amazon EC2 image ID, such as ami-0ff8a91507f77f867
   CyberarkAccountId:
     Type: String
     Description: Enter the CyberArk Account ID (AMI Owner account ID).
@@ -1101,10 +1130,6 @@ Parameters:
     Type: String
     Description: Enter the path of the recovery public key file within the bucket.
     Default: recpub.key
-  VaultInstanceName:
-    Type: String
-    Description: Enter a name for the Vault instance.
-    Default: CyberArk Vault
   VaultMasterPassword:
     Type: String
     Description: Enter a password for the Primary Vault Master user.
@@ -1158,6 +1183,18 @@ Parameters:
     Type: String
     Description: Retype the secret string for the DR User.
     NoEcho: true
+  VaultInstanceName:
+    Type: String
+    Description: Enter a name for the Vault instance.
+    Default: CyberArk Vault
+  VaultHostname:
+    Type: String
+    Description: Enter the hostname for Vault servers ("-dr" will be added as suffix for Vault DR).
+    AllowedPattern: ^((?!-)(?=.*[a-zA-Z])[A-Za-z0-9-]{3,15}(?<!-))$
+    ConstraintDescription: Parameter must only contain uppercase and lowercase letters (at least one letter), hyphens and numbers. Hostname can't start or end with hyphen.
+    MaxLength: 15
+    MinLength: 3
+    Default: vault
   VaultInstanceType:
     Type: String
     Description: Select the instance type of the Vault instance.
@@ -1176,19 +1213,32 @@ Parameters:
   DRInstanceSubnetId:
     Type: 'AWS::EC2::Subnet::Id'
     Description: Select the Subnet Id where the Vault DR instance will reside.
+  ComponentsCustomAmi:
+    Type: String
+    Description: Enter the Components Image ID, if you wish to use a custom Components image.
+    AllowedPattern: ^ami-[a-f\d]{8}(?:[a-f\d]{9})?$|.{0,0}
+    ConstraintDescription: An Amazon EC2 image ID, such as ami-0ff8a91507f77f867
   ComponentsInstanceName:
     Type: String
     Description: Enter a name for the PAS Components instance.
     Default: CyberArk Components
+  ComponentsHostname:
+    Type: String
+    Description: Enter the hostname for the PAS Components instance.
+    AllowedPattern: ^((?!-)(?=.*[a-zA-Z])[A-Za-z0-9-]{3,15}(?<!-))$
+    ConstraintDescription: Parameter must only contain uppercase and lowercase letters (at least one letter), hyphens and numbers. Hostname can't start or end with hyphen.
+    MaxLength: 15
+    MinLength: 3
+    Default: pas-components
   ComponentsInstanceType:
     Type: String
     Description: Select the instance type of the PAS Components instance.
     AllowedValues:
-      - m4.large
-      - m4.xlarge
-      - m4.2xlarge
-      - m4.4xlarge
-    Default: m4.large
+      - m5.large
+      - m5.xlarge
+      - m5.2xlarge
+      - m5.4xlarge
+    Default: m5.large
   ComponentsInstanceSecurityGroups:
     Type: List<AWS::EC2::SecurityGroup::Id>
     Description: Assign Security Groups to the PAS Components instance.
@@ -1228,6 +1278,7 @@ Metadata:
         Parameters:
           - EULA
           - WinVersion
+          - VaultCustomAmi
           - CyberarkAccountId
           - KeyName
           - VaultFilesBucket
@@ -1236,7 +1287,6 @@ Metadata:
       - Label:
           default: Vault and DR Configuration
         Parameters:
-          - VaultInstanceName
           - VaultAdminPassword
           - RetypeAdminPassword
           - VaultMasterPassword
@@ -1245,6 +1295,8 @@ Metadata:
           - RetypeDRPassword
           - Secret
           - SecretRetype
+          - VaultInstanceName
+          - VaultHostname
           - VaultInstanceType
           - VaultInstanceSecurityGroups
           - VaultInstanceSubnetId
@@ -1252,7 +1304,9 @@ Metadata:
       - Label:
           default: Components Configuration
         Parameters:
+          - ComponentsCustomAmi
           - ComponentsInstanceName
+          - ComponentsHostname
           - ComponentsInstanceType
           - ComponentsInstanceSecurityGroups
           - ComponentsInstanceSubnetId
@@ -1287,8 +1341,12 @@ Metadata:
         default: DR User Secret
       SecretRetype:
         default: Retype DR User Secret
+      VaultCustomAmi:
+        default: Custom Vault Image ID (Optional)
       VaultInstanceName:
         default: Vault Instance Name
+      VaultHostname:
+        default: Vault Hostname
       VaultInstanceType:
         default: Primary Vault and Vault DR Instance Type
       VaultInstanceSecurityGroups:
@@ -1297,8 +1355,12 @@ Metadata:
         default: Primary Vault Instance Subnet Id
       DRInstanceSubnetId:
         default: Vault DR Instance Subnet Id
+      ComponentsCustomAmi:
+        default: Custom Components Image ID (Optional)
       ComponentsInstanceName:
         default: Components Instance Name
+      ComponentsHostname:
+        default: Components Hostname
       ComponentsInstanceType:
         default: Components Instance Type
       ComponentsInstanceSecurityGroups:
@@ -1309,6 +1371,12 @@ Conditions:
   SecretEmpty: !Equals
     - ''
     - !Ref Secret
+  VaultCustomImageEmpty: !Equals
+    - ''
+    - !Ref VaultCustomAmi
+  ComponentsCustomImageEmpty: !Equals
+    - ''
+    - !Ref ComponentsCustomAmi
 Outputs:
   CloudWatchLogGroupName:
     Description: The name of the CloudWatch log group
