--- a/aws/Full-PAS-Deployment.yaml
+++ b/aws/Full-PAS-Deployment.yaml
@@ -1362,10 +1362,7 @@ Resources:
                   /opt/CD-Image/register.sh aws "${VaultIpAddress}"
                   $(curl -H "X-aws-ec2-metadata-token:$TOKEN" -v http://169.254.169.254/latest/meta-data/instance-id)
                   ec2-user Administrator ${AWS::Region} "${StoreAdminPassword.SsmId}"
-                - VaultIpAddress: !If
-                  - DRValueEmpty
-                  - !Sub '${VaultMachine.PrivateIp}'
-                  - !Sub '${VaultMachine.PrivateIp},${VaultDRMachine.PrivateIp}'
+                - VaultIpAddress: !Sub '${VaultMachine.PrivateIp},${VaultDRMachine.PrivateIp}'
             02-PostInstall:
               command: sudo rm -rf /opt/CD-Image/
             99-SignalCompletion:
