--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -868,7 +868,10 @@ Resources:
                   "${VaultIpAddress}"  $(curl -H
                   "X-aws-ec2-metadata-token:$TOKEN" -v
                   http://169.254.169.254/latest/meta-data/instance-id) ec2-user
-                - VaultIpAddress: !Sub '${VaultPrivateIP},${DRPrivateIP}'
+                - VaultIpAddress: !If
+                  - DRValueEmpty
+                  - !Sub '${VaultPrivateIP}'
+                  - !Sub '${VaultPrivateIP},${DRPrivateIP}'
             02-PostInstall:
               command: sudo rm -rf /opt/CD-Image/
             99-SignalCompletion:
