--- a/aws/PAS-AIO-DR-Deployment.yaml
+++ b/aws/PAS-AIO-DR-Deployment.yaml
@@ -1090,6 +1090,45 @@ Resources:
       ResourceSignal:
         Timeout: PT30M
     DeletionPolicy: Retain
+  VaultDNSRecord:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !Ref PASHostedZoneId
+      Name: !Join
+      - ''
+      - - !Ref VaultHostname
+        - '.pas.local'
+      ResourceRecords:
+      - !GetAtt VaultMachine.PrivateIp
+      TTL: '900'
+      Type: A
+    DependsOn: VaultMachine
+  VaultDRDNSRecord:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !Ref PASHostedZoneId
+      Name: !Join
+      - ''
+      - - !Ref VaultHostname
+        - '-dr.pas.local'
+      ResourceRecords:
+      - !GetAtt VaultDRMachine.PrivateIp
+      TTL: '900'
+      Type: A
+    DependsOn: VaultDRMachine
+  ComponentsDNSRecord:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !Ref PASHostedZoneId
+      Name: !Join
+      - ''
+      - - !Ref ComponentsHostname
+        - '.pas.local'
+      ResourceRecords:
+      - !GetAtt ComponentsMachine.PrivateIp
+      TTL: '900'
+      Type: A
+    DependsOn: ComponentsMachine
 Parameters:
   EULA:
     Type: String
@@ -1119,6 +1158,9 @@ Parameters:
     Type: AWS::EC2::KeyPair::KeyName
     Description: Select an existing Key Pair from your AWS account.
     ConstraintDescription: Can contain only ASCII characters.
+  PASHostedZoneId:
+    Type: 'AWS::Route53::HostedZone::Id'
+    Description: Provide the ID for the Hosted Zone created during the network deployment template.
   VaultFilesBucket:
     Type: String
     Description: Enter the name of the S3 bucket containing the license and recovery public key.
@@ -1298,6 +1340,7 @@ Metadata:
           - VaultCustomAmi
           - CyberarkAccountId
           - KeyName
+          - PASHostedZoneId
           - VaultFilesBucket
           - LicenseFile
           - RecoveryPublicKey
@@ -1336,6 +1379,8 @@ Metadata:
         default: CyberArk Account ID
       KeyName:
         default: Key Pair
+      PASHostedZoneId:
+        default: PAS Hosted Zone Id
       VaultFilesBucket:
         default: S3 Bucket
       LicenseFile:
